[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Turrets/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Turrets/Bullets/BaseBullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.66469, 1.51011 )

[node name="Bullet" type="Area2D"]
show_behind_parent = true
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 1, 0, 1, 0.866667 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.3, 1.3, 1, 1 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 1, 0.264175 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
